fix: align settings control widths

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,3 +19,8 @@
 .mat-form-field {
   width: 240px;
 }
+
+.settings-form {
+  display: flex;
+  flex-direction: column;
+}
